--- a/src/style.css
+++ b/src/style.css
@@ -1,225 +1,125 @@
+@font-face {
+  font-family: Droid_sans_mono;
+  src: url(font/Droid_Sans_Mono.woff);
+}
+@font-face {
+  font-family: Default_sans;
+  src: url(font/Ali_Puhui_Medium.woff);
+}
 body {
   padding: 0;
   margin: 0;
   overflow-y: scroll;
-  font-family: monospace;
 }
-
 body,
 input,
 textarea {
-  font-family: 'DejaVu Sans Mono', monospace;
   font-size: 12px;
-  -o-tab-size: 4;
-  -moz-tab-size: 4;
-  tab-size: 4;
+  word-wrap: break-word;
+  word-break: break-all;
 }
-
 input[type="checkbox"] {
   margin: 0;
-  margin-right: 1em;
+  margin-right: 4px;
 }
-
 label {
   vertical-align: 3px;
 }
-
 input,
 textarea {
   background: none;
   border: none;
   outline: none;
   resize: none;
-  max-height: 400px;
 }
-
 h4 {
   font-size: 12px;
   margin: 1em 0;
   font-weight: bold;
 }
-
 pre {
   tab-size: 2;
   white-space: pre-wrap;
   word-wrap: break-word;
-  -o-tab-size: 4;
-  -moz-tab-size: 4;
   tab-size: 4;
+  -moz-tab-size: 4;
 }
-
 a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
-
 a:hover {
   text-decoration: underline;
 }
-
 #sidebar-content ul {
   padding-inline-start: 20px;
 }
-
 #sidebar-content ul li {
   list-style: disc outside none;
 }
-
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 10px;
-  display: block;
-  list-style-type: disc;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 40px;
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 10px;
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
 }
-
 ul li {
   list-style: inside;
 }
-
 .hidden {
   display: none;
 }
-
 .expand {
-  height: 100%;
+    height: 100%;
 }
-
 .container {
   max-width: 600px;
   margin: 0 auto;
 }
-
 #messages {
   padding-top: 2em;
 }
-
-.message,
-.refmessage {
+.message, .refmessage {
   padding-bottom: 1em;
 }
-
-.chat-nick {
+.nick {
   float: left;
   width: 16em;
   margin-left: -17em;
   margin-right: 1em;
   text-align: right;
   white-space: nowrap;
+  overflow: hidden;
 }
-
 .trip {
   font-size: 10px;
 }
-
 .text {
   margin: 0;
   margin-left: 1em;
-  overflow: hidden;
 }
-
 .text p {
   margin: 0;
 }
-
-p.folded {
-  max-height: 10em;
-  overflow: auto;
-}
-
-p.folded::before {
-  content: "Folded, Click or scroll to See more...";
-  color: grey
-}
-
-.message .text {
-  overflow-wrap: break-word;
-  /*Note: In contrast to word-break, overflow-wrap (word-wrap is now an alias of overflow-wrap) will only create a break if an entire word cannot be placed on its own line without overflowing.
-  https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap
-  
-  I think this is a proper solution of too long messages without any spaces which may overflow the paragraph, though i dont know how official hack.chat client does the same thing.*/
-}
-
-.katex-display,
-.katex {
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-pre.captcha {
-  line-height: 1;
-  width: max-content;
-  font-size: small;
-}
-
-.colorful {
-  background: linear-gradient(to right, #6600cc, #9900ff, #9900cc, #660066, #9900cc, #9900ff, #6600cc);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: rainbow_animation 6s ease-in-out infinite;
-  background-size: 400% 100%;
-}
-
-.jebbed {
-  background: linear-gradient(to right, #6666ff, #0099ff, #00ff00, #ff3399, #6666ff);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: rainbow_animation 6s ease-in-out infinite;
-  background-size: 400% 100%;
-}
-
-@keyframes rainbow_animation {
-
-  0%,
-  100% {
-    background-position: 0 0;
-  }
-
-  50% {
-    background-position: 100% 0;
-  }
-}
-
-button#send {
-  width: max-content;
-  height: 100%;
-}
-
-button#sent-pre,
-button#sent-next {
-  width: auto;
-  margin: 0%;
-}
-
-button.char {
-  float: left;
-}
-
 #footer {
   position: fixed;
   bottom: 0;
   width: 100%;
 }
-
 #chatform {
-  width: 100%;
   border-top: 1px solid;
 }
-
 #chatinput {
   width: 100%;
   padding: 1em;
   box-sizing: border-box;
 }
-
 #sidebar {
   position: fixed;
   top: 0;
@@ -229,62 +129,37 @@ button.char {
   border-left: solid 1px;
   overflow-y: auto;
 }
-
 #sidebar-content {
   width: 180px;
   padding-bottom: 10%;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   margin: 3px;
   margin-top: 0px;
 }
-
 blockquote {
   padding: 3px 10px;
   margin: 3px;
-  border-left: 5px solid #4e4e4e;
 }
-
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: #000000;
-  background-color: #4e4e4e;
-  border-radius: 4px;
 }
-
 hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #4e4e4e;
 }
-
-mark {
-  background-color: #60ac39;
-  color: black;
-}
-
 pre {
   display: block;
   padding: 9.5px;
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.42857143;
-  color: #797979;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #4e4e4e;
-  border: 1px solid #000;
   border-radius: 4px;
 }
-
 table {
   background-color: transparent;
   width: 100%;
@@ -293,120 +168,428 @@ table {
   border-spacing: 0;
   border-collapse: collapse;
 }
-
-table>caption+thead>tr:first-child>th,
-table>colgroup+thead>tr:first-child>th,
-table>thead:first-child>tr:first-child>th,
-table>caption+thead>tr:first-child>td,
-table>colgroup+thead>tr:first-child>td,
-table>thead:first-child>tr:first-child>td {
-  border-top: 0;
+table > caption + thead > tr:first-child > th, table > colgroup + thead > tr:first-child > th, table > thead:first-child > tr:first-child > th, table > caption + thead > tr:first-child > td, table > colgroup + thead > tr:first-child > td, table > thead:first-child > tr:first-child > td {
+    border-top: 0;
 }
-
-table>thead>tr>th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #4e4e4e;
+table > thead > tr > th, table > tbody > tr > th, table > tfoot > tr > th, table > thead > tr > td, table > tbody > tr > td, table > tfoot > tr > td {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
 }
-
-table>thead>tr>th,
-table>tbody>tr>th,
-table>tfoot>tr>th,
-table>thead>tr>td,
-table>tbody>tr>td,
-table>tfoot>tr>td {
-  padding: 8px;
-  line-height: 1.42857143;
-  vertical-align: top;
-  border-top: 1px solid #4e4e4e;
-}
-
 th {
-  text-align: left;
+    text-align: left;
 }
-
-td,
-th {
-  padding: 0;
+td, th {
+    padding: 0;
 }
-
-table>tbody>tr:nth-child(odd)>td,
-table>tbody>tr:nth-child(odd)>th {
-  background-color: #4e4e4e;
+table > thead > tr > th, table > tbody > tr > th, table > tfoot > tr > th, table > thead > tr > td, table > tbody > tr > td, table > tfoot > tr > td {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
 }
-
-table>thead>tr>th,
-table>tbody>tr>th,
-table>tfoot>tr>th,
-table>thead>tr>td,
-table>tbody>tr>td,
-table>tfoot>tr>td {
-  padding: 8px;
-  line-height: 1.42857143;
-  vertical-align: top;
-  border-top: 1px solid #4e4e4e;
+td, th {
+    padding: 0;
 }
-
-td,
-th {
-  padding: 0;
-}
-
 img {
   max-width: 50%;
   max-height: 800px;
 }
 
-ul,
-ol {
-  padding: 0;
-  margin: 0;
-}
-
-ul ul,
-ol ol {
-  padding-left: 2em;
-}
-
-.break {
-  white-space: pre-line;
-}
-
-/* Mobile style */
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .messages {
     border: none;
   }
-
   #messages {
     padding: 0.5em;
   }
-
   .message {
     padding-bottom: 0.5em;
   }
-
-  .chat-nick {
+  .nick {
     margin: 0;
     float: none;
     text-align: left;
     display: inline;
   }
-
   .text {
     display: inline;
   }
-
-  .text * {
-    overflow: hidden;
-  }
-
   #sidebar {
-    /* 
-      https://github.com/ZhangChat-Dev-Group/ZhangChat/blob/main/client/style.css
-      The Style above is under MIT License 
-    */
+    top: 0.5em;
     bottom: auto;
-    border-bottom: solid 1px;
+    right: 0.5em;
+    border: none;
   }
+}
+button {
+    border: none;
+    padding: 3px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+}
+input{
+    display: unset;
+    width: 13px;
+    height: 13px;
+    top: auto;
+    left: unset;
+}
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10+.
+ */
+
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+
+[hidden] {
+  display: none;
 }
